tests/fail/for_non_valued_both.tig
for i := () to () do i
